lab1/Test/L1-A-1-60.cmm
int 647971278 cto4g 
;
int ;&& 
> 